ts-tests/baselines/reference/es6ImportShadowing.errors.txt
es6ImportShadowing.ts(19,1): error TS2451: Cannot redeclare block-scoped variable 'x'.


==== es6ImportShadowing.ts (1 errors) ====
    // File: test1.ts - import should conflict with top-level let
    import { x } from "./moduleB";
    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'x'.
    let x = 3; // Error: Duplicate identifier 'x'
    ~~~~~~~~~~
    Additional locations were found in the same file.
    ~~~~~~~~~~
    import { x } from "./moduleB";
